--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
-body{
 
-	display: flex;
-}
 div img{
-	width: 110%;
-	height: 52%;
+	width: 100%;
 }
 .grey_text{
 	color: grey;	
@@ -29,9 +25,14 @@ div img{
 	justify-content: space-between;
 }
 .card_design{
-	width: 45%;
-	height: 50%;
-	padding: 3px;
+	width: 35%;
+	height: 40%;
+	padding: 5px;
 	border-radius: 5px;
-	box-shadow: 1px 1px #888888; 
+	margin: 5px;
+	box-shadow: 1px 1px 3px #888888; 
+}
+.card_align{
+	display: flex;
+	margin: auto;
 }
